--- a/AspNetGame/AspNetGame.csproj
+++ b/AspNetGame/AspNetGame.csproj
@@ -238,6 +238,7 @@
     <Compile Include="Controllers\Game\Admin\ResourceController.cs" />
     <Compile Include="Controllers\Game\Admin\UnitTemplateController.cs" />
     <Compile Include="Controllers\Game\PlanetController.cs" />
+    <Compile Include="Controllers\Game\ResourceAmountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -250,8 +251,10 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Game\Base\Abilities.cs" />
-    <Compile Include="Models\Game\Base\Cost.cs" />
+    <Compile Include="Models\Game\Base\ResourceAmount.cs" />
     <Compile Include="Models\Game\Base\Resource.cs" />
+    <Compile Include="Models\Game\Constants.cs" />
+    <Compile Include="Models\Game\Contracts\IAbility.cs" />
     <Compile Include="Models\Game\Contracts\IAttacker.cs" />
     <Compile Include="Models\Game\Contracts\IBuilder.cs" />
     <Compile Include="Models\Game\Contracts\IExtractor.cs" />
@@ -266,10 +269,8 @@
     <Compile Include="Models\Game\Player.cs" />
     <Compile Include="Models\Game\Timeloop\GameTickableProvider.cs" />
     <Compile Include="Models\Game\Timeloop\ITickable.cs" />
-    <Compile Include="Models\Game\Timeloop\ITickableProvider.cs" />
     <Compile Include="Models\Game\Timeloop\ITimeloopService.cs" />
     <Compile Include="Models\Game\Timeloop\TimeloopService.cs" />
-    <Compile Include="Models\Game\Timeloop\TimeloopThread.cs" />
     <Compile Include="Models\Game\Units\UnitTemplate.cs" />
     <Compile Include="Models\Game\ViewModels\ResourcesModel.cs" />
     <Compile Include="Repositories\Core\BaseRepository.cs" />
@@ -346,51 +347,6 @@
     </Content>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <Content Include="Content\Site.css" />
-    <Content Include="Services\Views\Web.config" />
-    <Content Include="Services\Views\_ViewStart.cshtml" />
-    <Content Include="Services\Views\Home\Index.cshtml" />
-    <Content Include="Services\Views\Shared\Error.cshtml" />
-    <Content Include="Services\Views\Shared\_Layout.cshtml" />
-    <Content Include="Services\Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Services\Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Services\Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Services\Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Services\Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Services\Views\Account\Login.cshtml" />
-    <Content Include="Services\Views\Account\Register.cshtml" />
-    <Content Include="Services\Views\Account\ResetPassword.cshtml" />
-    <Content Include="Services\Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Services\Views\Account\SendCode.cshtml" />
-    <Content Include="Services\Views\Account\VerifyCode.cshtml" />
-    <Content Include="Services\Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Services\Views\Users\Index.cshtml" />
-    <Content Include="Services\Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Services\Views\Role\Create.cshtml" />
-    <Content Include="Services\Views\Role\Index.cshtml" />
-    <Content Include="Services\Views\Manage\AddPhoneNumber.cshtml" />
-    <Content Include="Services\Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Services\Views\Manage\Index.cshtml" />
-    <Content Include="Services\Views\Manage\ManageLogins.cshtml" />
-    <Content Include="Services\Views\Manage\SetPassword.cshtml" />
-    <Content Include="Services\Views\Manage\VerifyPhoneNumber.cshtml" />
-    <Content Include="Services\Views\Resource\Details.cshtml" />
-    <Content Include="Services\Views\Resource\Index.cshtml" />
-    <Content Include="Services\Views\Shared\ResourcesCost.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Create.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Details.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Attacker.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Builder.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Extractor.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Mobile.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Researcher.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Fragments\Storage.cshtml" />
-    <Content Include="Services\Views\UnitTemplate\Index.cshtml" />
-    <Content Include="Services\Views\Planet\Create.cshtml" />
-    <Content Include="Services\Views\Planet\Index.cshtml" />
-    <Content Include="Services\Views\Shared\PlanetCard.cshtml" />
-    <Content Include="Services\Views\Building\Create.cshtml" />
-    <Content Include="Services\Views\Building\Index.cshtml" />
-    <Content Include="Services\Views\Shared\BuildingTypeCard.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
@@ -440,7 +396,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Services\Views\Player\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Player\" />
   </ItemGroup>
